--- a/Web.Release.config
+++ b/Web.Release.config
@@ -1,31 +1,35 @@
 ﻿<?xml version="1.0"?>
-
-<!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
-
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-	<!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an atrribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+	<connectionStrings xdt:Transform="Replace">
+		<add name="eNrollConnectionString" connectionString="server=localhost;database=eNrollQ;uid=sa;pwd=say98" providerName="System.Data.SqlClient" />
+		<add name="Entities" connectionString="metadata=res://*/App_Data.EnrollExpressModel.csdl|res://*/App_Data.EnrollExpressModel.ssdl|res://*/App_Data.EnrollExpressModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=eNrollQ;user id=sa;password=say98;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 	<system.web>
 		<compilation xdt:Transform="RemoveAttributes(debug)" />
-		<!--
-      In the example below, the "Replace" transform will replace the entire 
-      <customErrors> section of your web.config file.
-      Note that because there is only one customErrors section under the 
-      <system.web> node, there is no need to use the "xdt:Locator" attribute.
-      
-      <customErrors defaultRedirect="GenericError.htm"
-        mode="RemoteOnly" xdt:Transform="Replace">
-        <error statusCode="500" redirect="InternalError.htm"/>
-      </customErrors>
-    -->
-	</system.web>
+		<customErrors mode="RemoteOnly" defaultRedirect="/Error.html" xdt:Transform="Replace">
+			<error statusCode="404" redirect="/404.aspx" />
+		</customErrors>
+	</system.web>	
+	<system.webServer >
+		<httpErrors xdt:Transform="Insert">
+			<remove statusCode="401" subStatusCode="-1" />
+			<remove statusCode="403" subStatusCode="-1" />
+			<remove statusCode="405" subStatusCode="-1" />
+			<remove statusCode="406" subStatusCode="-1" />
+			<remove statusCode="412" subStatusCode="-1" />
+			<remove statusCode="501" subStatusCode="-1" />
+			<remove statusCode="502" subStatusCode="-1" />
+			<remove statusCode="500" subStatusCode="-1" />
+			<remove statusCode="404" subStatusCode="-1" />
+			<error statusCode="404" path="/404.aspx" responseMode="Redirect" />
+			<error statusCode="500" path="/Error.html" responseMode="Redirect" />
+			<error statusCode="502" path="/Error.html" responseMode="Redirect" />
+			<error statusCode="501" path="/Error.html" responseMode="Redirect" />
+			<error statusCode="412" path="/Error.html" responseMode="Redirect" />
+			<error statusCode="406" path="/Error.html" responseMode="Redirect" />
+			<error statusCode="405" path="/Error.html" responseMode="Redirect" />
+			<error statusCode="403" path="/Error.html" responseMode="Redirect" />
+			<error statusCode="401" path="/Error.html" responseMode="Redirect" />
+		</httpErrors>
+	</system.webServer>
 </configuration>
